[project]
name = "redisorm"
version = "0.1.0"
description = "Redis ORM built on top of Pydantic and asyncio Redis client"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "redis>=4.5.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
